package org.atlantfs;

interface DirIblock extends IBlock, DirectoryOperations {
}
