@startuml
'https://plantuml.com/class-diagram

interface Iblock {
    size(): long
    blocksCount(): int
    flush(buffer: ByteBuffer): void
    type(): IBlockType
    delete(): void
}
interface FileIblock
interface FileOperations {
    write(position: long, buffer: ByteBuffer): int
    read(position: long, buffer: ByteBuffer): int
}
interface DirIblock
interface DirOperations {
    iterator(): Iterator<DirEntry>
    addDirectory(inode: Inode.Id, name: String): DirEntry
    addRegularFile(inode: Inode.Id, name: String): DirEntry
    add(inode: Inode.Id, fileType: FileType, name: String): DirEntry
    get(name: String): DirEntry
    rename(name: String, newName: String): void
    delete(name: String): void
}

Iblock <|-- FileIblock
FileOperations <|-- FileIblock
Iblock <|-- DirIblock
DirOperations <|-- DirIblock

class DataIblock
class FileBlockMapping

class DirList
class DirBlockMapping

FileIblock <|-- DataIblock
FileIblock <|-- FileBlockMapping

DirIblock <|-- DirList
DirIblock <|-- DirBlockMapping

@enduml
